--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.2.5",
-  "description": "A sample Node.js app using Express 4",
+  "name": "react-starter-pack",
+  "version": "0.0.0",
+  "description": "React starter pack",
   "engines": {
     "node": "5.9.1"
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "webpack -d --watch",
+    "build" : "webpack -p"
+
   },
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "ejs": "2.4.1",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "webpack": "^2.3.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/DSerejo/react-starter-pack.git"
   },
   "keywords": [
     "node",
-    "heroku",
-    "express"
+    "react",
+    "load"
   ],
   "license": "MIT"
 }
