--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-starter-pack",
+  "name": "react-load-test",
   "version": "0.0.0",
-  "description": "React starter pack",
+  "description": "React load test",
   "engines": {
     "node": "5.9.1"
   },
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/DSerejo/react-starter-pack.git"
+    "url": "https://github.com/DSerejo/react-load-test.git"
   },
   "keywords": [
     "node",
