--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "webpack -d --watch",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "postinstall":"npm run build"
   },
+
   "dependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -18,6 +20,7 @@
     "babel-preset-react": "^6.23.0",
     "ejs": "2.4.1",
     "express": "4.13.3",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "webpack": "^2.3.2"
@@ -35,7 +38,19 @@
   "devDependencies": {
     "babel-jest": "^19.0.0",
     "chai": "^3.5.0",
+    "chai-shallow-deep-equal": "^1.4.6",
+    "css-loader": "^0.28.0",
+    "enzyme": "^2.8.0",
     "jest": "^19.0.2",
-    "regenerator-runtime": "^0.10.3"
+    "react-addons-test-utils": "^15.4.2",
+    "regenerator-runtime": "^0.10.3",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0"
+  },
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "node_modules/react/",
+      "node_modules/enzyme/"
+    ]
   }
 }
